objects/CSS_Accreditation__c.object
<CustomObject>
    <description>Object to capture information related to Technician and Account Accreditations</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS Accreditations</relationshipLabel>
        <relationshipName>CSS_Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CERT_ROW_ID__c</fullName>
        <externalId>true</externalId>
        <label>CERT_ROW_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>IF(Account__r.Location__c != null &amp;&amp; Account__r.Location__c != &apos;&apos;, RIGHT(Account__r.Location__c ,5), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_SMN_Key__c</fullName>
        <formula>IF( Location_Code__c != &apos;&apos; &amp;&amp;  Service_Model_Name__c != &apos;&apos;,Location_Code__c + Service_Model_Name__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location SMN Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKET_APPLICATION__c</fullName>
        <label>MARKET_APPLICATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Code__c</fullName>
        <label>OEM Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Name__c</fullName>
        <label>OEM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_RANGE__c</fullName>
        <label>PRODUCT_RANGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <label>Product Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QUAL_PROG_ID__c</fullName>
        <description>Captures the Technician QUAL PROG ID from ProMotion System</description>
        <label>QUAL PROG ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMN_ROW_ID__c</fullName>
        <externalId>true</externalId>
        <label>SMN_ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_CODE__c</fullName>
        <label>SP_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify if the record need to be picked by the batch to populate Service Level. Story # MAR-615</description>
        <label>Service Level Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <description>Service Model Name for the Accreditation</description>
        <label>Service Model Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpCode__c</fullName>
        <label>SpCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpRowId__c</fullName>
        <label>SpRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isSMNAccountLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSMNAccountLevel</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS Accreditation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QUAL_PROG_ID__c</columns>
        <columns>Certification_Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Service_Model_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSS_Accreditation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Accreditations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>